temp/objects/Claim_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Insurance_Claim__c</fullName>
        <label>Insurance Claim</label>
        <referenceTo>Insurance_Claim__c</referenceTo>
        <relationshipLabel>Claim Transaction</relationshipLabel>
        <relationshipName>Claim_Transaction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reserve_Amount__c</fullName>
        <label>Reserve Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Settlement_or_Judgement_Amount__c</fullName>
        <label>Settlement or Judgement Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Claim_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <label>Claim Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>START_Claim_Transaction</fullName>
        <columns>Insurance_Claim__c</columns>
        <columns>NAME</columns>
        <columns>Amount_Paid__c</columns>
        <columns>Settlement_or_Judgement_Amount__c</columns>
        <columns>Reserve_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>START Claim Transaction</label>
    </listViews>
    <nameField>
        <displayFormat>CT-{000000000}</displayFormat>
        <label>Claim Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Transaction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>